--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ main: net.zeeraa.terrasmp.terrasmp.TerraSMP
 name: TerraSMP
 description: TerraSMP Plugin
 version: 1.0
-depend: [NovaCore, Factions]
+depend: [NovaCore, Factions, NovaMain]
 softdepend: [Essentials]
 
 permissions:
